@@ -9,5 +9,24 @@ Upstream Author:
 
 Copyright:
 
+#   pbuilder -- personal Debian package builder
+#   Copyright (C) 2001-2004 Junichi Uekawa
+#
+#   This program is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
+#
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
+#
+#   You should have received a copy of the GNU General Public License
+#   along with this program; if not, write to the Free Software
+#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+# pbuilder by Junichi Uekawa <dancer@debian.org> 2001 Aug 25
+
 GPL version 2 or later.
 See /usr/share/common-licenses/GPL on Debian systems.
