@@ -118,6 +118,7 @@ while [ -n "$1" ]; do
 	    shift; shift;
 	    ;;
 	--logfile)
+	    echo "  -> Logging to $2"
 	    exec > "$2";
 	    exec 2>&1
 	    PBUILDER_BUILD_LOGFILE=$(readlink -f "$2")
