@@ -1,7 +1,7 @@
 #! /bin/bash
 # common modules for pbuilder.
 #   pbuilder -- personal Debian package builder
-#   Copyright (C) 2001-2003 Junichi Uekawa
+#   Copyright (C) 2001-2004 Junichi Uekawa
 #
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
@@ -20,7 +20,7 @@
 function showhelp () {
     cat <<EOF
 pbuilder - a personal builder
-Copyright 2001-2003 Junichi Uekawa
+Copyright 2001-2004 Junichi Uekawa
 Distributed under GNU Public License version 2 or later
 
 pbuilder [operation] [pbuilder-options]
