@@ -5,8 +5,9 @@ pbuilder (0.99) UNRELEASED; urgency=low
    - pbuilder create failure due to debootstrap needs to be fixed in debootstrap script side.
   * Fix B91dpkg-i to fix typo in script to get names of packages properly.
   * Change HTML CSS
+  * debian/copyright: fix to get full copyright notice.
 
- -- Junichi Uekawa <dancer@debian.org>  Sun, 11 Jan 2004 09:34:02 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 11 Jan 2004 23:47:41 +0900
 
 pbuilder (0.98) unstable; urgency=low
 
