@@ -1,5 +1,13 @@
 2004-01-11  Junichi Uekawa  <dancer@debian.org>
 
+	* pbuilder-checkparams (IGNORE_UMOUNT): logging
+
+	* debian/copyright (Copyright): update copyright info.
+
+	* pbuilder: update copyright info
+
+	* pbuilder-modules: update copyright info.
+
 	* testsuite/run-test.sh: change to pbuilder test, instead of UML.
 
 	* testsuite/run-test-uml.sh: split out UML test
@@ -1874,7 +1882,7 @@
 	energy. When pbuilder stabilizes, I will look at doing it.
 
 	14 Jan 2002 Junichi Uekawa <dancer@debian.org>
-	Copyright (c) 2001-2003 Junichi Uekawa
+	Copyright (c) 2001-2004 Junichi Uekawa
 
 	$Id$
 
